# bookletcreator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_TEMPLATE.md  booklet_maker.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/bookletcreator/: __init__.py  cli.py  gui.py
tests/: test_cli.py
